--- a/public/posts/10.md
+++ b/public/posts/10.md
@@ -1,9 +1,7 @@
 ---
-title: how to get things done
-description: this is greate
-tags: money, income, coding
-conver_image: ayobami.jpg
-author: Tom
+categry: Funding round
+title: Round 10 of approvals
+author: dYdX Grants Team
 ---
 
 Hi Everyone!
@@ -16,7 +14,7 @@ We’re also happy to share that the Committee revamp is close to getting finali
 
 We’re also happy to share that the Committee revamp is close to getting finalized. This revamp will enable payments to be complete by the Grants multisig. The team is working on the final documentation and will share everything with the community as soon as its ready. We’re excited to finally start paying our Grantees to really get things going!
 
-# Centralization lets you make decisions quickly
+### Centralization lets you make decisions quickly
 
 We’re also happy to share that the Committee revamp is close to getting finalized. This revamp will enable payments to be complete by the Grants multisig. The team is working on the final documentation and will share everything with the community as soon as its ready. We’re excited to finally start paying our Grantees to really get things going!
 
