--- a/public/posts/10.md
+++ b/public/posts/10.md
@@ -1,8 +1,10 @@
 ---
-categry: Funding round
+category: Funding round
 title: Round 10 of approvals
 author: dYdX Grants Team
 ---
+
+> The more realistic an experience we provide, the more real feedback we can get. With a more static mockup, or broad-line prototype, or a rich prototype with placeholder data, you tend to get more hypothetical feedback. — Creighton Abrams
 
 Hi Everyone!
 
@@ -14,7 +16,7 @@ We’re also happy to share that the Committee revamp is close to getting finali
 
 We’re also happy to share that the Committee revamp is close to getting finalized. This revamp will enable payments to be complete by the Grants multisig. The team is working on the final documentation and will share everything with the community as soon as its ready. We’re excited to finally start paying our Grantees to really get things going!
 
-### Centralization lets you make decisions quickly
+## Centralization lets you make decisions quickly
 
 We’re also happy to share that the Committee revamp is close to getting finalized. This revamp will enable payments to be complete by the Grants multisig. The team is working on the final documentation and will share everything with the community as soon as its ready. We’re excited to finally start paying our Grantees to really get things going!
 
