--- a/public/posts/10.md
+++ b/public/posts/10.md
@@ -4,8 +4,6 @@ title: Round 10 of approvals
 author: dYdX Grants Team
 ---
 
-> The more realistic an experience we provide, the more real feedback we can get. With a more static mockup, or broad-line prototype, or a rich prototype with placeholder data, you tend to get more hypothetical feedback. — Creighton Abrams
-
 Hi Everyone!
 
 Excited to share another round of funding approved by the Committee! For Round 6, we have 5 grantees with a total of $246,000.00 in DYDX funding. Check out the table below for more information on each grant.
@@ -24,3 +22,7 @@ We’re also happy to share that the Committee revamp is close to getting finali
 
 The more realistic an experience we provide, the more real feedback we can get. With a more static mockup, or broad-line prototype, or a rich prototype with placeholder data, you tend to get more hypothetical feedback.
  — Creighton Abrams
+
+> "The more realistic an experience we provide, the more real feedback we can get. With a more static mockup, or broad-line prototype, or a rich prototype with placeholder data, you tend to get more hypothetical feedback." — Creighton Abrams
+
+Hope everyone has a great week!
